--- a/index.htm
+++ b/index.htm
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <tittle>DOCUMENT</tittle>
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   
+    <div class="bienvenido">
+        <h1>Bienvenido a Mi Página</h1>
+    </div>
+
+    <div class="texto1">
+        <h2>Explora el contenido</h2>
+    </div>
+
+    <div class="texto2">
+        <p id="texto"></p>
+    </div>
+
+    <div class="imagencita">
+        <img src="https://i.pinimg.com/236x/4d/37/a9/4d37a9a70b8abbf026a487af29aa3d0e.jpg" alt="foto perrito">
+    </div>
+
+    <div class="videito">
+        <a href="https://youtu.be/xvFZjo5PgG0?si=MI4b02D00cjJR_1H" target="_blank">Mira este video!!</a>
+    </div>
 </body>
 </html>
