css para pantalla pc

--- a/index.htm
+++ b/index.htm
@@ -13,19 +13,16 @@
     </div>
 
     <div class="texto1">
-        <h2>Explora el contenido</h2>
+        <h2>Mira este perrito</h2>
+        <img id="imagen" src="https://i.pinimg.com/236x/4d/37/a9/4d37a9a70b8abbf026a487af29aa3d0e.jpg" alt="foto perrito">
     </div>
 
     <div class="texto2">
         <p id="texto"></p>
     </div>
 
-    <div class="imagencita">
-        <img src="https://i.pinimg.com/236x/4d/37/a9/4d37a9a70b8abbf026a487af29aa3d0e.jpg" alt="foto perrito">
-    </div>
-
-    <div class="videito">
-        <a href="https://youtu.be/xvFZjo5PgG0?si=MI4b02D00cjJR_1H" target="_blank">Mira este video!!</a>
+    <div class="videito1">
+        <a id="linkVideo" href="https://youtu.be/xvFZjo5PgG0?si=MI4b02D00cjJR_1H" target="_blank">Mira este video!!</a>
     </div>
 </body>
 </html>
